Fix spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,8 +30,7 @@ h3 {
 }
 
 .section {
-	margin-top: 2rem;
-	margin-bottom: 2rem;
+	padding-top: 4rem;
 }
 
 /* Buttons */
